fix: dumb wave error and header was broken in article view

--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,10 @@ header nav a:hover {
     display: none;
 }
 
+.menu-button p {
+    display: none;
+}
+
 .menu-button,
 .menu-button::before,
 .menu-button::after {
